--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head> <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
 
-<link href="saacad.css" rel="stylesheet"> 
+<link href="style.css" rel="stylesheet"> 
 
 <title>Clock</title>
 
@@ -30,7 +30,7 @@
 
 <div class="number number12">12</div> </div>
 
-<script src="saacad.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
